added contact info in footer

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@ My name is Saja Hamayel. I am a junior at Illinois Tech and I'm an aspiring opto
 </div>
 
 <footer>
+Contact Me: shamayel@hawk.iit.edu
+</br>
    	&copy; Saja Hamayel
 </footer>
 </body>
