--- a/about.html
+++ b/about.html
@@ -65,6 +65,8 @@ As an Illinois Tech student, I am very involved in planning and attending numero
 -->
 
 <footer>
+   Contact Me:  shamayel@hawk.iit.edu
+   </br>
    	&copy; Saja Hamayel
 </footer>
 
